fixat delete fastän det funkade
