# routes/index.js
@@ -7,6 +7,6 @@ router.get("/listings", listing.get);
 router.get("/listings/:_id", listing.getById);
 router.post("/listings", listing.post);
 router.put("/listings/:_id", listing.put);
-router.delete("/listings/:_id", listing.deleteing);
+router.delete("/listings/:id", listing.deleteById);
 
 module.exports = router
